@@ -1,21 +1,23 @@
+//
 // This file is part of the aMule Project
 //
-// Copyright (c) 2003-2004 aMule Project ( http://www.amule-project.net )
-// Copyright (C) 2002 Merkur ( merkur-@users.sourceforge.net / http://www.emule-project.net )
+// Copyright (c) 2003-2004 aMule Project (http://www.amule.org)
+// Copyright (C) 2002 Merkur (merkur-@users.sourceforge.net / http://www.emule-project.net)
 //
-//This program is free software; you can redistribute it and/or
-//modify it under the terms of the GNU General Public License
-//as published by the Free Software Foundation; either
-//version 2 of the License, or (at your option) any later version.
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either
+// version 2 of the License, or (at your option) any later version.
 //
-//This program is distributed in the hope that it will be useful,
-//but WITHOUT ANY WARRANTY; without even the implied warranty of
-//MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-//GNU General Public License for more details.
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
 //
-//You should have received a copy of the GNU General Public License
-//along with this program; if not, write to the Free Software
-//Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software
+// Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+// 
 
 #ifndef AMULE_H
 #define AMULE_H
@@ -172,8 +174,8 @@ public:
 	void		Localize_mule();
 	void		Trigger_New_version(wxString new_version);
 	
-	// Kry - External connections
-	wxServer*		localserver;	
+	// Used to detect a previous running instance of aMule
+	wxServer*	localserver;
 	
 	// shakraw - new EC code using wxSocketBase
 	ExternalConn*	ECServerHandler;
@@ -220,6 +222,9 @@ public:
 	CClientUDPSocket*	clientudp;
 	CIPFilter*		ipfilter;
 
+	// Frame title
+	wxString	m_FrameTitle;
+	
 	void ShutDown();
 	
 	void NotifyEvent(GUIEvent event);
